--- a/VLaboralWeb/App/Puestos/Partials/puestoDetalleOferta.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestoDetalleOferta.html
@@ -75,14 +75,14 @@
                                         </md-option>
                                     </md-select>
                                 </md-input-container>
-                                <md-button class="md-raised" ng-click="subRubroAddClick()">Agregar</md-button>
+                                <md-button class="md-raised" ng-click="subRubroAddClickEdit()">Agregar</md-button>
                             </div>
                         </div>
 
                         <div layout="row">
                             <div flex="grow">
                                 <h4>Rubros seleecionados</h4>
-                                <md-chips>
+                                <!--<md-chips>
                                     <md-chip ng-repeat="subRubro in puestoEdit.Subrubros">
                                         <md-chip-template>
                                             <strong>{{subRubro.Nombre}}</strong>
@@ -92,12 +92,23 @@
                                             </button>
                                         </md-chip-template>
                                     </md-chip>
+                                </md-chips>-->
+                                <md-chips ng-model="puestoEdit.Subrubros"
+                                          readonly="!editValue ? true : false"
+                                          name="chipContainer"
+                                          md-max-chips="5"
+                                          md-transform-chip="transformChip($chip)">
+                                    <!---->
+                                    <md-chip-template>
+                                        <strong>{{$chip.Nombre}}</strong>
+                                        <button class="md-secondary md-icon-button md-button md-ink-ripple" type="button" ng-click="QuitarSubRubroEdit($chip)">x</button>
+                                    </md-chip-template>
                                 </md-chips>
-                                <md-list>
+                                <!--<md-list>
                                     <md-list-item ng-repeat="subRubro in puestoEdit.Subrubros">
                                         <p>{{subRubro.Nombre}}</p>
                                     </md-list-item>
-                                </md-list>
+                                </md-list>-->
                             </div>
                         </div>
                     </md-card-content>
@@ -237,9 +248,9 @@
         <md-button ng-click="guardarPuesto(puestoEdit)">
             Guardar cambios
         </md-button>
-        <md-button ng-click="cancel(puestoEdit)" class="md-primary">
+        <!--<md-button ng-click="cancel(puestoEdit)" class="md-primary">
             Cancelar
-        </md-button>
+        </md-button>-->
     </md-dialog-actions>
     <!--<md-table-container>
         <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
