--- a/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestosAdd.html
@@ -82,7 +82,7 @@
                         <div layout="row">
                             <div flex="grow">
                                 <h4>Rubros seleecionados</h4>
-                                <md-chips>
+                                <!--<md-chips>
                                     <md-chip ng-repeat="subRubro in puesto.Subrubros">
                                         <md-chip-template>
                                             <strong>{{subRubro.Nombre}}</strong>
@@ -92,6 +92,17 @@
                                             </button>
                                         </md-chip-template>
                                     </md-chip>
+                                </md-chips>-->
+                                <md-chips ng-model="puesto.Subrubros"
+                                          readonly="!editValue ? true : false"
+                                          name="chipContainer"
+                                          md-max-chips="5"
+                                          md-transform-chip="transformChip($chip)">
+                                    <!---->
+                                    <md-chip-template>
+                                        <strong>{{$chip.Nombre}}</strong>
+                                        <button class="md-secondary md-icon-button md-button md-ink-ripple" type="button" ng-click="QuitarSubRubro($chip)">x</button>
+                                    </md-chip-template>
                                 </md-chips>
                             </div>
                         </div>
