--- a/VLaboralWeb/App/Puestos/Partials/puestoDetalleOferta.html
+++ b/VLaboralWeb/App/Puestos/Partials/puestoDetalleOferta.html
@@ -192,7 +192,7 @@
                                 </md-input-container>
                             </div>
                             <div flex="10">
-                                <md-button class="md-raised" ng-click="valorTipoRequisitoAddClick()">Agregar</md-button>
+                                <md-button class="md-raised" ng-click="valorTipoRequisitoAddClickEdit()">Agregar</md-button>
                             </div>
                         </div>
                         <div layout="row">
@@ -227,7 +227,7 @@
                                                     <!--Se activa la función de autoverificación solo si el tipoRequisito lo permite-->
                                                 </td>
                                                 <td md-cell>
-                                                    <md-button class="md-fab md-mini md-primary" aria-label="Quitar Requisito" title="Quitar Requisito" ng-click="QuitarRequisito(requisito.TipoRequisitoId)">
+                                                    <md-button class="md-fab md-mini md-primary" aria-label="Quitar Requisito" title="Quitar Requisito" ng-click="QuitarRequisitoEdit(requisito.TipoRequisitoId)">
                                                         X
                                                     </md-button>
                                                 </td>
